add_library(libnoise_module OBJECT
        abs.cpp
        abs.h
        add.cpp
        add.h
        billow.cpp
        billow.h
        blend.cpp
        blend.h
        cache.cpp
        cache.h
        checkerboard.cpp
        checkerboard.h
        clamp.cpp
        clamp.h
        const.cpp
        const.h
        curve.cpp
        curve.h
        cylinders.cpp
        cylinders.h
        displace.cpp
        displace.h
        exponent.cpp
        exponent.h
        invert.cpp
        invert.h
        max.cpp
        max.h
        min.cpp
        min.h
        module.h
        modulebase.cpp
        modulebase.h
        multiply.cpp
        multiply.h
        perlin.cpp
        perlin.h
        power.cpp
        power.h
        ridgedmulti.cpp
        ridgedmulti.h
        rotatepoint.cpp
        rotatepoint.h
        scalebias.cpp
        scalebias.h
        scalepoint.cpp
        scalepoint.h
        select.cpp
        select.h
        spheres.cpp
        spheres.h
        terrace.cpp
        terrace.h
        translatepoint.cpp
        translatepoint.h
        turbulence.cpp
        turbulence.h
        voronoi.cpp
        voronoi.h
        )

target_include_directories(libnoise_module
        PUBLIC
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${PACKAGE_INCLUDE_INSTALL_DIR}>
        )
